Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetnumber.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, number> yoda
        number ret = yoda:useForce(one, two)
        output "passed"
     end
end
