Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetnumberFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
